[gd_scene load_steps=12 format=2]

[ext_resource path="res://GFX/Interface/PNG/barHorizontal_white_mid.png" type="Texture" id=1]
[ext_resource path="res://GFX/Interface/Fonts/kenvector_future.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://GFX/Interface/Fonts/kenvector_future_thin.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Interfaces/UI_Theme.tres" type="Theme" id=4]
[ext_resource path="res://Interfaces/PauseScreen.gd" type="Script" id=5]
[ext_resource path="res://GFX/Interface/PNG/barHorizontal_white_left.png" type="Texture" id=6]
[ext_resource path="res://GFX/Interface/PNG/barHorizontal_white_right.png" type="Texture" id=7]
[ext_resource path="res://GFX/Interface/PNG/glassPanel.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 34
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 3 )

[node name="PauseScreen" type="Popup"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 5 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="NinePatchRect" type="NinePatchRect" parent="CenterContainer"]
margin_left = 312.0
margin_top = 100.0
margin_right = 712.0
margin_bottom = 500.0
rect_min_size = Vector2( 400, 400 )
texture = ExtResource( 8 )
patch_margin_left = 15
patch_margin_top = 40
patch_margin_right = 15
patch_margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 30.0
margin_right = -30.0
margin_bottom = -30.0
custom_constants/separation = 13

[node name="Label" type="Label" parent="CenterContainer/NinePatchRect/VBoxContainer"]
margin_right = 340.0
margin_bottom = 27.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1

[node name="Label2" type="Label" parent="CenterContainer/NinePatchRect/VBoxContainer"]
margin_top = 40.0
margin_right = 340.0
margin_bottom = 121.0
custom_fonts/font = SubResource( 1 )
text = "Mission Briefing"
align = 1
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/NinePatchRect/VBoxContainer"]
margin_top = 134.0
margin_right = 340.0
margin_bottom = 146.0
custom_constants/separation = 0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="CenterContainer/NinePatchRect/VBoxContainer/HBoxContainer"]
modulate = Color( 0.486275, 0.486275, 0.486275, 1 )
margin_left = 78.0
margin_right = 90.0
margin_bottom = 12.0
rect_min_size = Vector2( 12, 12 )
texture = ExtResource( 6 )
expand = true

[node name="TextureRect2" type="TextureRect" parent="CenterContainer/NinePatchRect/VBoxContainer/HBoxContainer"]
modulate = Color( 0.486275, 0.486275, 0.486275, 1 )
margin_left = 90.0
margin_right = 250.0
margin_bottom = 12.0
rect_min_size = Vector2( 160, 12 )
texture = ExtResource( 1 )
expand = true

[node name="TextureRect3" type="TextureRect" parent="CenterContainer/NinePatchRect/VBoxContainer/HBoxContainer"]
modulate = Color( 0.486275, 0.486275, 0.486275, 1 )
margin_left = 250.0
margin_right = 262.0
margin_bottom = 12.0
rect_min_size = Vector2( 12, 12 )
texture = ExtResource( 7 )
expand = true

[node name="ResumeButton" type="Button" parent="CenterContainer/NinePatchRect/VBoxContainer"]
margin_top = 159.0
margin_right = 340.0
margin_bottom = 182.0
custom_colors/font_color = Color( 0.384314, 0.933333, 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "Resume Mission"
flat = true

[node name="RestartButton" type="Button" parent="CenterContainer/NinePatchRect/VBoxContainer"]
margin_top = 195.0
margin_right = 340.0
margin_bottom = 218.0
custom_colors/font_color = Color( 0.384314, 0.933333, 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "Restart Mission"
flat = true

[node name="LoadMainButton" type="Button" parent="CenterContainer/NinePatchRect/VBoxContainer"]
margin_top = 231.0
margin_right = 340.0
margin_bottom = 254.0
custom_colors/font_color = Color( 0.384314, 0.933333, 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "Exit to Main Menu"
flat = true

[node name="QuitButton" type="Button" parent="CenterContainer/NinePatchRect/VBoxContainer"]
margin_top = 267.0
margin_right = 340.0
margin_bottom = 290.0
custom_colors/font_color = Color( 0.384314, 0.933333, 1, 1 )
custom_fonts/font = SubResource( 3 )
text = "Quit to desktop"
flat = true
expand_icon = true

[connection signal="pressed" from="CenterContainer/NinePatchRect/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="CenterContainer/NinePatchRect/VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="CenterContainer/NinePatchRect/VBoxContainer/LoadMainButton" to="." method="_on_LoadMainButton_pressed"]
[connection signal="pressed" from="CenterContainer/NinePatchRect/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
